[package]
name = "commoner"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

[lib]
name = "commoner_lib"
path = "src/lib.rs"

[[bin]]

name = "commoner"
path = "src/bin/commoner.rs"

[dependencies]
serde = "~1.0"
serde_json = "~1.0"
reqwest = "~0.9"
trie-rs = "~0.1"
libflate = "~0.1"
rust_warc = "~1.0"
